--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 asgiref==3.8.1
+bleach==6.1.0
 dj-database-url==2.2.0
 Django==5.0.6
+django-summernote==0.8.20.0
 gunicorn==22.0.0
 packaging==24.0
 psycopg2==2.9.9
+six==1.16.0
 sqlparse==0.5.0
 typing_extensions==4.12.1
 tzdata==2024.1
+webencodings==0.5.1
