--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
 asgiref==3.8.1
 bleach==3.3.0
+cffi==1.17.1
+cryptography==43.0.3
 dj-database-url==2.2.0
 Django==5.0.6
 django-allauth==0.63.3
 django-summernote==0.8.20.0
+djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
 gunicorn==22.0.0
 packaging==24.0
 psycopg2==2.9.9
+pycparser==2.22
+PyJWT==2.9.0
 six==1.16.0
 sqlparse==0.5.0
 typing_extensions==4.12.1
